[gd_scene load_steps=7 format=3 uid="uid://bsw1feypjofhk"]

[ext_resource type="Script" path="res://exploding_bullet.gd" id="1_dwati"]
[ext_resource type="PackedScene" uid="uid://c4hyphsc43hjb" path="res://explosion_particle.tscn" id="2_p7vdo"]

[sub_resource type="Gradient" id="Gradient_5dvo6"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q5xc"]
gradient = SubResource("Gradient_5dvo6")
width = 30
height = 10
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpyxs"]
size = Vector2(30, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_dyvup"]
radius = 160.0

[node name="exploding_bullet" type="Node2D"]
script = ExtResource("1_dwati")
explosion_particle = ExtResource("2_p7vdo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_2q5xc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wpyxs")

[node name="EnemyDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
shape = SubResource("CircleShape2D_dyvup")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="EnemyDetection" to="." method="_on_enemy_detection_area_entered"]
[connection signal="area_exited" from="EnemyDetection" to="." method="_on_enemy_detection_area_exited"]
